--- a/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/HeavyLandingLeg/part.cfg
@@ -35,20 +35,74 @@ PART
 	breakingForce = 250
      breakingTorque = 250
 	bulkheadProfiles = srf, size1
-
 	MODULE
 	{
-		name = ModuleLandingLeg
-		animationName = LegExtend
-		wheelColliderName = wheelCollider
+		name = ModuleWheelBase
+		
+		wheelColliderTransformName = wheelCollider		
+		
+		wheelType = LEG
+
+		// setting this to true will override the radius and center parameters
+		FitWheelColliderToMesh = False		
+		radius = 0.5
+		center = 0,0,0
+		mass = 0.040
+		autoFrictionAvailable = False			
+		TooltipTitle = Landing Leg
+		TooltipPrimaryField = 
+		
+		groundHeightOffset = 4
+	}
+	MODULE
+	{
+		name = ModuleWheelSuspension
+		baseModuleIndex = 0
 		suspensionTransformName = PistonST
-		orientFootToGround = true
-		landingFootName = Foot_Joint
-		alignFootUp = false
-		suspensionUpperLimit = 0.37
-		impactTolerance = 4500
-		suspensionSpring = 12
-		suspensionDamper = 3
+		
+		suspensionDistance = 0.785
+		suspensionOffset = -0.785
+		
+		targetPosition = 1.0			
+		springRatio = 8
+		damperRatio = 2
+		boostRatio = 0.75
+		
+		extendDurationFactor = 1.0
+		retractDuractionFactor = 1.0
+	}
+	MODULE
+	{
+		name = ModuleWheelDeployment
+		baseModuleIndex = 0
+		
+		animationTrfName = Base
+		animationStateName = LegExtend
+		deployedPosition = 1
+		deployTargetTransformName = deployTgt
+		
+		TsubSys = 0.8
+	}
+	MODULE
+	{
+		name = ModuleWheelLock
+		maxTorque = 50
+	}
+	MODULE
+	{
+		name = ModuleWheelBogey
+		baseModuleIndex = 0
+		
+		bogeyTransformName = Foot_Joint
+		deployModuleIndex = 2
+		
+		maxPitch = 70
+		minPitch = -70
+		restPitch = 0
+		pitchResponse = 100
+		
+		bogeyAxis = 1, 0, 0
+		bogeyUpAxis = 0, 0, -1
 	}
 
 }
