--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -1,28 +1,26 @@
 PART
 {
-name = SMX_InlineDrill
+name = SMX_0mStackDrill
 module = Part
 author = SuicidalInsanity
 
 mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 1.180695, 0.0, 0.0, 1.0, 0.0, 1
-node_stack_bottom = 0.0, -1.180695, 0.0, 0.0, -1.0, 0.0, 1
+node_stack_top = 0.0, 0.4997374, 0.0, 0.0, 1.0, 0.0
 
 TechRequired = advScienceTech
-entryCost = 21000
-cost = 7500
+entryCost = 4500
+cost = 1500
 category = Utility
 subcategory = 0
-title = 'Driller Jr.' Aerospace Mining Excavator
+title = 'Extract-O-Tron Junior' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = A compact mining drill designed to extract usable materials from asteriods and planetary regolith. When not deployed, it fits within a mk2 fuselage compatible aeroshell housing. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
-
-attachRules = 1,1,1,1,0
+description = A small scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 4.33 times more efficient than the stock radial drill. 
+attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
-mass = 0.65
+mass = 0.25
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -30,23 +28,28 @@ angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
 
-	MODEL
+MODEL
 	{
-		model = MiningExpansion/Parts/Mk2ISRUDrill/Model
-		texture = mk2FuselageShort, Squad/Parts/FuelTank/mk2FuselageShort/mk2FuselageShort
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		model = MiningExpansion/Parts/Size0StackDrill/Model
+   		texture = ksp_r_rockProbe_diff,Squad/Parts/Resources/MiniDrill/ksp_r_rockProbe_diff
+		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
+		texture = DustParticle, MiningExpansion/Parts/Size0StackDrill/DustParticle
 	}
 
 	MODULE
 	{
+		name = ModuleOverheatDisplay
+	}
+	MODULE
+	{
 		name = ModuleResourceHarvester
 		HarvesterType = 0
-		Efficiency = 0.85
+		Efficiency = 0.3
 		ResourceName = Ore
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
 		StopActionName = Stop Surface Harvester
-		ImpactTransform = ImpactTransform
+		ImpactTransform = impactTransform
 		ImpactRange = 5
 		AutoShutdown = true
 		UseSpecialistBonus = true
@@ -58,16 +61,16 @@ maxTemp = 2000 // = 3000
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 15
+			Ratio = 3
 		}
 		TemperatureModifier
 		{
 			key = 0 10000
-			key = 250 7500
-			key = 500 5000
-			key = 750 500
+			key = 250 5000
+			key = 500 2500
+			key = 750 250
 			key = 1000 0
-		}		
+		}	
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
@@ -89,10 +92,10 @@ maxTemp = 2000 // = 3000
 		DirectAttach = false
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
-		PowerConsumption = 1.5
-		Efficiency = 3.5
-		ImpactRange = 5
-		ImpactTransform = ImpactTransform
+		PowerConsumption = 0.3
+		Efficiency = 1
+		ImpactRange = 1.5
+		ImpactTransform = impactTransform
 		UseSpecialistBonus = true
 		AutoShutdown = true
 		GeneratesHeat = true
@@ -122,8 +125,8 @@ maxTemp = 2000 // = 3000
 	MODULE
 	{
 		name = ModuleAnimationGroup
-		deployAnimationName = Deploy_Drill
-		activeAnimationName = Drill_Running
+		deployAnimationName = Size0Unpack
+		activeAnimationName = Size0Running
 		moduleType = Drill
 	}	
 	MODULE
@@ -141,6 +144,6 @@ maxTemp = 2000 // = 3000
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
