--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
@@ -1,27 +1,37 @@
 PART
 {
-name = SMX_2mStackDrill
+name = SMX_1mInlineDrill
 module = Part
 author = SuicidalInsanity
 
-mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 0.4994704, 0.0, 0.0, 1.0, 0.0, 1
+node_stack_top = 0.0, 0.9764016, 0.0, 0.0, 1.0, 0.0, 1
+node_stack_bottom = 0.0, -0.9764016, 0.0, 0.0, -1.0, 0.0, 1
 
-TechRequired = experimentalScience
-entryCost = 98000
-cost = 38000
+MODEL
+	{
+		model = MiningExpansion/Parts/Size1InlineDrill/Model
+		texture = mk2CargoBay, Squad/Parts/Utility/mk2CargoBay/mk2CargoBay
+		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
+		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
+	}
+
+
+TechRequired = advScienceTech
+entryCost = 18000
+cost = 6000
 category = Utility
 subcategory = 0
-title = 'Terravore' Stack Mining Excavator
+title = 'Drillson-125' Inline Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
+description = Like other mining excavators, the Drillson-125 is capable of extracting resources from planetary regolith and asteroidal bodies for later storage and processing. unlike other drills, this unit was designed with atmospheric use in mind, featuring an integrated inline aeroshell housing for ease of mounting and greater aerodynamic performance. When operated by a skilled engineer, you will be able to operate with better efficiency. These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
 
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 8.5
+mass = 1.2
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -29,22 +39,16 @@ angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
 
-MODEL
-	{
-		model = MiningExpansion/Parts/Size2StackDrill/Model
-		texture = Processor_Large, Squad/Parts/Resources/ISRU/Processor_Large
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-	}
-
 	MODULE
 	{
 		name = ModuleOverheatDisplay
 	}
+
 	MODULE
 	{
 		name = ModuleResourceHarvester
 		HarvesterType = 0
-		Efficiency = 20
+		Efficiency = 1
 		ResourceName = Ore
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
@@ -61,7 +65,7 @@ MODEL
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 30
+			Ratio = 15
 		}
 		TemperatureModifier
 		{
@@ -93,7 +97,7 @@ MODEL
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
-		Efficiency = 35
+		Efficiency = 3
 		ImpactRange = 5
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
@@ -126,9 +130,10 @@ MODEL
 	{
 		name = ModuleAnimationGroup
 		deployAnimationName = Unpack
-		activeAnimationName = TerrorMaw
+		activeAnimationName = Running
 		moduleType = Drill
 	}	
+	
 	MODULE
 	{
 		name = ModuleCoreHeat
