--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -1,37 +1,27 @@
 PART
 {
-name = SMX_1mInlineDrill
+name = SMX_1mStackDrill
 module = Part
 author = SuicidalInsanity
 
+mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 0.9764016, 0.0, 0.0, 1.0, 0.0, 1
-node_stack_bottom = 0.0, -0.9764016, 0.0, 0.0, -1.0, 0.0, 1
+node_stack_top = 0.0, 0.4997374, 0.0, 0.0, 1.0, 0.0, 1
 
-MODEL
-	{
-		model = MiningExpansion/Parts/Size1InlineDrill/Model
-		texture = mk2CargoBay, Squad/Parts/Utility/mk2CargoBay/mk2CargoBay
-		texture = ServiceBay, Squad/Parts/Utility/ServiceBay/ServiceBay
-		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-		texture = DustParticle, Squad/Parts/Resources/RadialDrill/DustParticle
-	}
-
-
-TechRequired = advScienceTech
-entryCost = 18000
-cost = 6000
+TechRequired = experimentalScience
+entryCost = 54000
+cost = 22500
 category = Utility
 subcategory = 0
-title = 'Drillson-125' Inline Mining Excavator
+title = 'Extract-O-Tron' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = Like other mining excavators, the Drillson-125 is capable of extracting resources from planetary regolith and asteroidal bodies for later storage and processing. unlike other drills, this unit was designed with atmospheric use in mind, featuring an integrated inline aeroshell housing for ease of mounting and greater aerodynamic performance. When operated by a skilled engineer, you will be able to operate with better efficiency. These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat.
+description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 4.33 times more efficient than the stock radial drill. Yields 3 1/3 times more Ore/s than the stock Drill-O-matic.
 
-attachRules = 1,1,1,1,0
+attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
-mass = 1.2
+mass = 2.5
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -39,16 +29,23 @@ angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
 
-	MODULE
+MODEL
 	{
-		name = ModuleOverheatDisplay
+		model = MiningExpansion/Parts/Size1StackDrill/Model
+		texture = ksp_s_processorSmall_diff, Squad/Parts/Resources/MiniISRU/ksp_s_processorSmall_diff
+		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+	//	texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
 	}
 
 	MODULE
 	{
+		name = ModuleOverheatDisplay
+	}
+	MODULE
+	{
 		name = ModuleResourceHarvester
 		HarvesterType = 0
-		Efficiency = 1
+		Efficiency = 5
 		ResourceName = Ore
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
@@ -97,7 +94,7 @@ maxTemp = 2000 // = 3000
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
-		Efficiency = 3
+		Efficiency = 9
 		ImpactRange = 5
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
@@ -130,10 +127,9 @@ maxTemp = 2000 // = 3000
 	{
 		name = ModuleAnimationGroup
 		deployAnimationName = Unpack
-		activeAnimationName = Running
+		activeAnimationName = Drill_Running
 		moduleType = Drill
 	}	
-	
 	MODULE
 	{
 		name = ModuleCoreHeat
