--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -1,27 +1,27 @@
 PART
 {
-name = SMX_1mStackDrill
+name = SMX_2mStackDrill
 module = Part
 author = SuicidalInsanity
 
 mesh = Model.mu
 scale = 1
 rescaleFactor = 1
-node_stack_top = 0.0, 0.4997374, 0.0, 0.0, 1.0, 0.0, 1
+node_stack_top = 0.0, 0.4994704, 0.0, 0.0, 1.0, 0.0, 2
 
 TechRequired = experimentalScience
-entryCost = 54000
-cost = 22500
+entryCost = 98000
+cost = 38000
 category = Utility
 subcategory = 0
-title = 'Drill-O-Matic Senior' Stack Mining Excavator
+title = 'Terravore' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
+description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 13.33 times more efficient than the stock radial drill.
 
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 2.5
+mass = 8.5
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -31,8 +31,8 @@ maxTemp = 2000 // = 3000
 
 MODEL
 	{
-		model = MiningExpansion/Parts/Size1StackDrill/Model
-		texture = ksp_s_processorSmall_diff, Squad/Parts/Resources/MiniISRU/ksp_s_processorSmall_diff
+		model = MiningExpansion/Parts/Size2StackDrill/Model
+		texture = Processor_Large, Squad/Parts/Resources/ISRU/Processor_Large
 		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
 	}
 
@@ -44,7 +44,7 @@ MODEL
 	{
 		name = ModuleResourceHarvester
 		HarvesterType = 0
-		Efficiency = 5
+		Efficiency = 20
 		ResourceName = Ore
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
@@ -61,7 +61,7 @@ MODEL
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 15
+			Ratio = 30
 		}
 		TemperatureModifier
 		{
@@ -93,7 +93,7 @@ MODEL
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
-		Efficiency = 9
+		Efficiency = 35
 		ImpactRange = 5
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
@@ -126,7 +126,7 @@ MODEL
 	{
 		name = ModuleAnimationGroup
 		deployAnimationName = Unpack
-		activeAnimationName = Drill_Running
+		activeAnimationName = TerrorMaw
 		moduleType = Drill
 	}	
 	MODULE
