--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
@@ -40,6 +40,58 @@ MODEL
 	{
 		name = ModuleOverheatDisplay
 	}
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = Monoprop
+		 StartActionName = Start ISRU [Monoprop]
+		 StopActionName = Stop ISRU [Monoprop]
+		AutoShutdown = true
+		TemperatureModifier
+		{
+			key = 0 50000
+			key = 750 25000
+			key = 1000 5000
+			key = 1250 2500	
+			key = 2000 2500	
+			key = 4000 0
+		}				
+		GeneratesHeat = true
+		DefaultShutoffTemp = .8
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.9 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.9 0 0
+			key = 1500 0.5 0 0
+			key = 3000 0.0 0 0 
+		}
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		Specialty = Engineer
+		EfficiencyBonus = 1
+
+		 
+		 INPUT_RESOURCE
+		 {
+			ResourceName = Ore
+			Ratio = 2
+		 }
+		 INPUT_RESOURCE
+		 {
+			ResourceName = ElectricCharge
+			Ratio = 15
+		 }
+		 OUTPUT_RESOURCE
+		 {
+			ResourceName = MonoPropellant
+			Ratio = 0.2
+			DumpExcess = false
+		 }
+	}
+
 
 	MODULE
 	{
