--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Refinery/ISRU.cfg
@@ -21,15 +21,15 @@ description = A smaller version of Kerbodyne's mobile processing plant, this mod
 	mass = 2.5
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.3
+	minimum_drag = 0.2
 	angularDrag = 1
 	crashTolerance = 50
 	breakingForce = 50
 	breakingTorque = 50
 	maxTemp = 2500 // = 3000
-	emissiveConstant = 0.8
 	fuelCrossFeed = True
 	bulkheadProfiles = srf, mk2
+	tags = conver isru mine )mining (ore process resource
 		MODEL
 	{
 		model = MiningExpansion/Parts/Mk2Refinery/Model
