--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0ISRU/ISRU.cfg
@@ -13,10 +13,10 @@ node_stack_bottom = 0.0, -0.33, 0.0, 0.0, -1.0, 0.0, 0
 
 TechRequired = experimentalScience
 entryCost = 52000
-cost = 20000
+cost = 750
 category = Utility
 subcategory = 0
-title = Convert-O-Tron 0625
+title = RefineOre Y-600 Mini Converter Module
 manufacturer = Coreworks Extractions Consortium
 description = This mobile processing plant can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
 attachRules = 1,1,1,0,0
@@ -29,6 +29,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3500
+tags = conver isru mine )mining (ore process resource
 
 MODEL
 	{
