--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0OreTank/Microtank.cfg
@@ -30,7 +30,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = black isru mine )mining (ore resource store
 MODEL
 	{
 		model = MiningExpansion/Parts/Size0OreTank/Model
