--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0StackDrill/Drill.cfg
@@ -16,7 +16,7 @@ category = Utility
 subcategory = 0
 title = 'Extract-O-Tron Junior' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = A small scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 4.33 times more efficient than the stock radial drill. 
+description = A small scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. Yields the same Ore/s as the stock mini drill. 
 attachRules = 1,1,1,0,0
 
 // --- standard part parameters ---
@@ -27,6 +27,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+tags = drill extractor harvest isru mine )mining (ore resource
 
 MODEL
 	{
