--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -14,7 +14,7 @@ entryCost = 54000
 cost = 22500
 category = Utility
 subcategory = 0
-title = 'Extract-O-Tron' Stack Mining Excavator
+title = 'Tremor' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
 description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 4.33 times more efficient than the stock radial drill. Yields 3 1/3 times more Ore/s than the stock Drill-O-matic.
 
@@ -28,7 +28,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = drill extractor harvest isru mine )mining (ore resource
 MODEL
 	{
 		model = MiningExpansion/Parts/Size1StackDrill/Model
