--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Generator/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2Generator/part.cfg
@@ -34,7 +34,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = array bank charge convert e/c elect energ pack power volt watt
 
 	MODULE
 	{
