--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/RadialDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/RadialDrill.cfg
@@ -29,6 +29,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
+tags = drill extractor harvest isru mine )mining (ore resource
 
 	MODEL
 	{
