--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2OreTank/part.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2OreTank/part.cfg
@@ -14,7 +14,7 @@ PART
 	subcategory = 0
 	title = Mk2 Holding Tank
 	manufacturer = Coreworks Extractions Consortium
-	description = A tank that can be used for storing raw materials that has been fitted into a Mk2 frame.  Not to be used as a bouncy castle.
+	description = A tank that can be used for storing raw materials that has been fitted into a Mk2 frame.  
 	attachRules = 1,1,1,1,0
 	mass = 1.25
 	dragModelType = default
@@ -28,6 +28,7 @@ PART
 	emissiveConstant = 0.8
 	fuelCrossFeed = True
 	bulkheadProfiles = srf, mk2
+	tags = black isru mine )mining (ore resource store
 	MODEL
 	{
 		model = MiningExpansion/Parts/Mk2OreTank/Model
