--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
@@ -37,7 +37,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = array bank charge convert e/c elect energ pack power volt watt
 
 	MODULE
 	{
