--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
@@ -38,7 +38,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = drill extractor harvest isru mine )mining (ore resource
 	MODULE
 	{
 		name = ModuleOverheatDisplay
