--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3ISRU/ISRU.cfg
@@ -13,10 +13,10 @@ node_stack_bottom = 0.0, -2.0, 0.0, 0.0, -1.0, 0.0, 3
 
 TechRequired = experimentalScience
 entryCost = 52000
-cost = 20000
+cost = 16000
 category = Utility
 subcategory = 0
-title = Convert-O-Tron 375
+title = RefineOre Y-3000 Jumbo Converter Module
 manufacturer = Coreworks Extractions Consortium
 description = This mobile processing plant can take raw materials containing even trace amounts of oxygen and hydrogen, and crack them into useful fuel products.  When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating.  Radiators can be used to help manage excessive heat.
 attachRules = 1,1,1,0,0
@@ -29,7 +29,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3500
-
+tags = conver isru mine )mining (ore process resource
 MODEL
 	{
 		model = MiningExpansion/Parts/Size3ISRU/Model
@@ -256,7 +256,7 @@ MODEL
 		 INPUT_RESOURCE
 		 {
 			ResourceName = ElectricCharge
-			Ratio = 30
+			Ratio = 45
 		 }
 		 OUTPUT_RESOURCE
 		 {
