--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size3OreTank/HugeTank.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size3OreTank/HugeTank.cfg
@@ -30,7 +30,7 @@ minimum_drag = 0.2
 angularDrag = 2
 crashTolerance = 7
 maxTemp = 2000 // = 3000
-
+tags = black isru mine )mining (ore resource store
 MODEL
 	{
 		model = MiningExpansion/Parts/Size3OreTank/Model
@@ -43,7 +43,24 @@ RESOURCE
 	amount = 0
 	maxAmount = 4500
 }
-
+RESOURCE
+{
+	name = XenonGas
+	amount = 0
+	maxAmount = 4500
+}
+RESOURCE
+{
+	name = ArgonGas
+	amount = 0
+	maxAmount = 4500
+}
+RESOURCE
+{
+	name = LqdHydrogen
+	amount = 0
+	maxAmount = 4500
+}
 MODULE
 {
 	name = ModuleFuelJettison
