Stock Mining Extenstion 0.96
Balances and tweaks

--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size0Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size0Generator/Generator.cfg
@@ -17,12 +17,12 @@ rescaleFactor = 1
 
 node_attach = 0,0,-0.3125,0,0,0,2
 node_stack_top = 0.0, 0.1932008, 0.0, 0.0, 1.0, 0.0, 0
-node_stack_bottom = 0.0, -0.1932008, 0.0, 0.0, 1.0, 0.0, 0 
+node_stack_bottom = 0.0, -0.1932008, 0.0, 0.0, -1.0, 0.0, 0 
 
 TechRequired = specializedElectrics
-entryCost = 25000
-cost = 7500
-category = Utility
+entryCost = 11000
+cost = 1125
+category = Electrical
 subcategory = 0
 title =  Small Fuel Cell Generator
 manufacturer = Coreworks Extractions Consortium
@@ -30,7 +30,7 @@ description = Need electricity but don't have the space to radially attach Fuel 
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 0.18
+mass = 0.09
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -54,19 +54,19 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 		INPUT_RESOURCE
 		{
 			ResourceName = LiquidFuel
-			Ratio = 0.013365
+			Ratio = 0.00675
 			FlowMode = STAGE_PRIORITY_FLOW
   		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 0.016335
+			Ratio = 0.00825
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 		OUTPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 12
+			Ratio = 6
 			DumpExcess = false
 		}
 	}
