--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1Generator/Generator.cfg
@@ -20,9 +20,9 @@ node_stack_top = 0.0, 0.3864016, 0.0, 0.0, 1.0, 0.0, 1
 node_stack_bottom = 0.0, -0.3864016, 0.0, 0.0, -1.0, 0.0, 1
 
 TechRequired = specializedElectrics
-entryCost = 25000
+entryCost = 18000
 cost = 7500
-category = Utility
+category = Electrical
 subcategory = 0
 title = Fuel Cell Generator
 manufacturer = Coreworks Extractions Consortium
@@ -54,19 +54,19 @@ tags = array bank charge convert e/c elect energ pack power volt watt
 		INPUT_RESOURCE
 		{
 			ResourceName = LiquidFuel
-			Ratio = 0.06075
+			Ratio = 0.05625
 			FlowMode = STAGE_PRIORITY_FLOW
   		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 0.09825
+			Ratio = 0.06875
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 		OUTPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 70
+			Ratio = 50
 			DumpExcess = false
 		}
 	}
