--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1InlineDrill/InlineDrill.cfg
@@ -56,11 +56,6 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
@@ -71,14 +66,14 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		{
 			key = 0 10000
 			key = 250 7500
-			key = 500 5000
+			key = 500 3750
 			key = 750 500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -107,14 +102,14 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		{
 			key = 0 10000
 			key = 250 5000
-			key = 500 2500
+			key = 500 1875
 			key = 750 500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -149,6 +144,6 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 75					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
