--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size1StackDrill/Drill.cfg
@@ -16,7 +16,7 @@ category = Utility
 subcategory = 0
 title = 'Tremor' Stack Mining Excavator
 manufacturer = Coreworks Extractions Consortium
-description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. 4.33 times more efficient than the stock radial drill. Yields 3 1/3 times more Ore/s than the stock Drill-O-matic.
+description = A large scale ventral mount heavy mining excavator designed to extract usable materials from asteriods and planetary regolith. When operated by a skilled engineer, you will be able to operate with better efficiency.  These modules operate best at their ideal operating temperatures, and features auto-shutdown in the event of excessive overheating. Radiators can be used to help manage excessive heat. Yields 3 1/3 times more Ore/s than the stock Drill-O-matic.
 
 attachRules = 1,1,1,0,0
 
@@ -34,7 +34,7 @@ MODEL
 		model = MiningExpansion/Parts/Size1StackDrill/Model
 		texture = ksp_s_processorSmall_diff, Squad/Parts/Resources/MiniISRU/ksp_s_processorSmall_diff
 		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
-	//	texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
+		texture = DustParticle, MiningExpansion/Parts/Size1InlineDrill/DustParticle
 	}
 
 	MODULE
@@ -53,29 +53,24 @@ MODEL
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 15
+			Ratio = 10
 		}
 		TemperatureModifier
 		{
-			key = 0 10000
-			key = 250 7500
-			key = 500 5000
-			key = 750 500
+			key = 0 20000
+			key = 250 15000
+			key = 500 10000
+			key = 750 2500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -85,6 +80,7 @@ MODEL
 			key = 750 .1
 			key = 1000 0
 		}
+
 	}
 
 	MODULE
@@ -103,15 +99,15 @@ MODEL
 		TemperatureModifier
 		{
 			key = 0 10000
-			key = 250 5000
-			key = 500 2500
-			key = 750 500
+			key = 250 7500
+			key = 500 5000
+			key = 750 1500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		Specialty = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -145,6 +141,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 200					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
