--- a/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Size2StackDrill/Drill.cfg
@@ -34,6 +34,7 @@ MODEL
 		model = MiningExpansion/Parts/Size2StackDrill/Model
 		texture = Processor_Large, Squad/Parts/Resources/ISRU/Processor_Large
 		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
+		texture = DustParticle, MiningExpansion/Parts/Size2StackDrill/DustParticle
 	}
 
 	MODULE
@@ -52,29 +53,24 @@ MODEL
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 30
+			Ratio = 6
 		}
 		TemperatureModifier
 		{
-			key = 0 10000
-			key = 250 7500
-			key = 500 5000
-			key = 750 500
+			key = 0 20000
+			key = 250 17500
+			key = 500 15000
+			key = 750 2500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -92,7 +88,7 @@ MODEL
 		DirectAttach = false
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
-		PowerConsumption = 1.5
+		PowerConsumption = 1.14
 		Efficiency = 35
 		ImpactRange = 5
 		ImpactTransform = ImpactTransform
@@ -101,16 +97,16 @@ MODEL
 		GeneratesHeat = true
 		TemperatureModifier
 		{
-			key = 0 10000
-			key = 250 5000
-			key = 500 2500
-			key = 750 500
+			key = 0 20000
+			key = 250 15000
+			key = 500 7500
+			key = 750 1500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		Specialty = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -144,6 +140,6 @@ MODEL
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 300					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
