--- a/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
+++ b/MiningExpansion/GameData/MiningExpansion/Parts/Mk2ISRUDrill/Drill.cfg
@@ -22,7 +22,7 @@ description = A compact mining drill designed to extract usable materials from a
 attachRules = 1,1,1,1,0
 
 // --- standard part parameters ---
-mass = 0.65
+mass = 1.3
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -37,7 +37,10 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		texture = mk2FuselageShort, Squad/Parts/FuelTank/mk2FuselageShort/mk2FuselageShort
 		texture = TriBitDrill, Squad/Parts/Resources/RadialDrill/TriBitDrill
 	}
-
+	MODULE
+	{
+		name = ModuleOverheatDisplay
+	}
 	MODULE
 	{
 		name = ModuleResourceHarvester
@@ -48,13 +51,8 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		StartActionName = Start Surface Harvester
 		StopActionName = Stop Surface Harvester
 		ImpactTransform = ImpactTransform
-		ImpactRange = 5
+		ImpactRange = 3
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
@@ -65,14 +63,14 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		{
 			key = 0 10000
 			key = 250 7500
-			key = 500 5000
+			key = 500 3750
 			key = 750 500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -82,6 +80,7 @@ tags = drill extractor harvest isru mine )mining (ore resource
 			key = 750 .1
 			key = 1000 0
 		}
+
 	}
 
 	MODULE
@@ -92,7 +91,7 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		StopActionName = Stop Asteroid Harvester
 		PowerConsumption = 1.5
 		Efficiency = 3.5
-		ImpactRange = 5
+		ImpactRange = 3
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
 		AutoShutdown = true
@@ -101,14 +100,14 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		{
 			key = 0 10000
 			key = 250 5000
-			key = 500 2500
+			key = 500 1875
 			key = 750 500
 			key = 1000 0
 		}		
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		Specialty = DrillSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -142,6 +141,6 @@ tags = drill extractor harvest isru mine )mining (ore resource
 		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
 		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
 		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+		MaxCoolant = 75					//Maximum amount of radiator capacity we can consume - 50 = 1 small
 	}
 }
